Fix main-section overflowing body

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -57,9 +57,8 @@ table.table td
 
 .main-section
   flex: 1
+  overflow-y: auto
   padding-top: 2rem
-
-.message
   margin: 16px 0
 
 .terminal
